# Sort-Algorithms-Comparison

./: CMakeLists.txt  README.md  main.cpp  notes.txt
Helpers/: Checker.cpp  Checker.h  Counter.cpp  Counter.h  Generator.cpp  Generator.h
Simulator/: Simulator.cpp  Simulator.h
Sorters/: HeapSort.cpp  HeapSort.h  InsertSort.cpp  InsertSort.h  QuickSort.cpp  QuickSort.h  QuickSort2.cpp  QuickSort2.h  ShellSort.cpp  ShellSort.h
Test/: Test.cpp  Test.h  input.txt
